--- a/404.md
+++ b/404.md
@@ -6,9 +6,9 @@ author: upthebuzzard
 categories: []
 permalink: /404.html
 ---
-# Sorry, but, um, that page you wanted, it isn't there.
+# Sorry, but, um, that page you wanted? It isn't there.
 
-As for why it isn't there, quite possibly that is a story in and of itself, in which case you've definitely come to the right place.
+As for why, quite possibly that is a story in and of itself, in which case you've definitely come to the right place.
 
 Leap, gazelle-like, to the [home page]({{ site.url }}) to see what stories are offer and, more importantly, where they actually are. As opposed to, you know, wherever you thought they were.
 
@@ -22,4 +22,10 @@ Let's consider the phrase *404 Not Found*
 * a study of the brains of world leaders discovers _404 Not Found_
 * looking through the list of all Boeing plane numbers, it turns out _404 Not Found_
 * the second worst band name in the age of the internet, after "The the", is _404 Not Found_
+* ...
+
+and then let's consider it some more
+
+* quite a long way down the list of famous Swedish names, we stumble on _404 Knut Found_
+* Simon Squirrel is looking to buy and then store a very specific amount of food for the winter, so has started the _404 Nut Fund_
 * ...
