added some 404 defns

--- a/404.md
+++ b/404.md
@@ -16,10 +16,10 @@ One possible contributing hiccup might be that you have an old url from when thi
 
 ## Still here?
 
-Let's consider the phrase *404 Not Found*
+Let's consider the phrase **404 Not Found**
 
 * a tragic train accident in a swamp leads to _404 Not Found_
-* a study of the brains of world leaders discovers _404 Not Found_
+* a study of world leaders' consciences discovers _404 Not Found_
 * looking through the list of all Boeing plane numbers, it turns out _404 Not Found_
 * the second worst band name in the age of the internet, after "The the", is _404 Not Found_
 * ...
@@ -28,4 +28,6 @@ and then let's consider it some more
 
 * quite a long way down the list of famous Swedish names, we stumble on _404 Knut Found_
 * Simon Squirrel is looking to buy and then store a very specific amount of food for the winter, so has started the _404 Nut Fund_
+* after a triumph of personal grooming using one those very fine-toothed combs, we consider today to be the _404 Nit Find_
+* half-way through the instructions of "create your own woollen palm tree", we read _404 Knit Frond_
 * ...
